# pre-commit-fluxcd

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  go.mod  go.sum  main.go  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yaml
check_charts_support_renovate/: __main__.py
check_decrypted_secret/: __main__.py
check_renovate/: __main__.py
check_secrets_encrypted/: __main__.py
check_unpinned_chart_version/: __main__.py
cmd/: cmd.go
cmd/charts_pinned/: cmd.go  cmd_test.go
cmd/charts_pinned/tests/: not_helmrelease.yaml  pinned.yaml  unpinned.yaml
cmd/charts_support_renovate/: cmd.go  cmd_test.go
cmd/charts_support_renovate/tests/: helmrelease_invalid.yaml  helmrelease_metadata_valid.yaml  helmrelease_sourceref_valid.yaml  helmrepository_invalid.yaml  helmrepository_valid.yaml
cmd/drift_detection/: cmd.go  cmd_test.go
cmd/drift_detection/tests/: enabled.yaml  warn.yaml
cmd/secrets_encrypted/: cmd.go  cmd_test.go
cmd/secrets_encrypted/tests/: data_invalid.yaml  data_valid.yaml  invalid.env  stringdata_invalid.yaml  stringdata_valid.yaml  valid.env
lib/: kubernetes.py  paths.py
src/check_charts_pinned/: __main__.py
src/check_charts_support_renovate/: __main__.py
src/check_drift_detection_enabled/: __main__.py
src/check_secrets_encrypted/: __main__.py
src/lib/: paths.py
tests/: check_decrypted_secret_data.py  check_renovate_data.py  check_unpinned_chart_version_data.py  test_check_decrypted_secret.py  test_check_renovate.py  test_check_unpinned_chart_version.py
tests/check_charts_pinned/: test_check_unpinned_chart_version.py
tests/check_charts_support_renovate/: test_check_renovate.py
tests/check_decrypted_secret/: test_check_decrypted_secret.py
tests/check_drift_detection_enabled/: data.py  test_check_drift_detection_enabled.py
tests/check_renovate/: test_check_renovate.py
tests/check_secrets_encrypted/: test_check_decrypted_secret.py
tests/check_unpinned_chart_version/: test_check_unpinned_chart_version.py
